--- a/package.json
+++ b/package.json
@@ -54,13 +54,14 @@
     "object-assign": "^4.1.1",
     "object-inspect": "^1.13.4",
     "on-finished": "^2.4.1",
-    "openai": "^4.90.0",
+    "openai": "^4.98.0",
     "parseurl": "^1.3.3",
     "path-to-regexp": "^0.1.12",
     "proxy-addr": "^2.0.7",
     "qs": "^6.13.0",
     "range-parser": "^1.2.1",
     "raw-body": "^2.5.2",
+    "replicate": "^1.0.1",
     "safe-buffer": "^5.2.1",
     "safer-buffer": "^2.1.2",
     "send": "^0.19.0",
