--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "http-errors": "^2.0.0",
     "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
+    "ioredis": "^5.6.1",
     "ipaddr.js": "^1.9.1",
+    "jsonwebtoken": "^9.0.2",
     "math-intrinsics": "^1.1.0",
     "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.3",
@@ -56,6 +58,9 @@
     "on-finished": "^2.4.1",
     "openai": "^4.98.0",
     "parseurl": "^1.3.3",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "path-to-regexp": "^0.1.12",
     "proxy-addr": "^2.0.7",
     "qs": "^6.13.0",
